# tapol_app

./: .flaskenv  .gitignore  .replit  README.md  app.db-journal  pyproject.toml  tapol.py
app/: __init__.py  forms.py  models.py  routes.py
app/templates/: _post.html  base.html  edit_profile.html  index.html  user.html
migrations/versions/: 0c508494af20_users_table.py  6a06a4d896f4_add_fields_to_users_table.py  fe20917a8e12_record_table.py
