[tool.poetry]
name = "tapolapp"
version = "0.1.0"
description = ""
authors = ["repl.it user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
python-dotenv = "^0.15.0"
flask-wtf = "^0.14.3"
wtforms = "^2.3.3"
Flask-SQLAlchemy = "^2.4.4"
Flask-Migrate = "^2.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
